<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory android:title="@string/cat_lock">
        <ListPreference
            android:key="auto_reboot"
            android:title="@string/auto_reboot_title"
            android:summary="%s"
            android:entries="@array/reboot_entries"
            android:entryValues="@array/reboot_values"
            android:defaultValue="0" />
        <ListPreference
            android:key="usb_restrict"
            android:persistent="false"
            android:title="@string/usb_restrict_title"
            android:summary="%s"
            android:entries="@array/usb_entries"
            android:entryValues="@array/usb_values" />
        <Preference
            android:key="duress"
            android:title="@string/duress_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_radios">
        <ListPreference
            android:key="wifi_timeout"
            android:title="@string/wifi_timeout_title"
            android:summary="%s"
            android:entries="@array/radio_entries"
            android:entryValues="@array/radio_values"
            android:defaultValue="0" />
        <ListPreference
            android:key="bt_timeout"
            android:title="@string/bt_timeout_title"
            android:summary="%s"
            android:entries="@array/radio_entries"
            android:entryValues="@array/radio_values"
            android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>
